# Shellcode_Forensic_Android

./: .dockerignore  .gitignore  ADVANCED_ANALYSIS.md  Analyser.sh  CONTRIBUTING.md  DOCKER_TESTS.md  DYNAMIC_ANALYSIS.md  Dockerfile  FEATURES.md  FRIDA_GUIDE.md  LICENSE  Makefile  PDF_FEATURE.md  PHYSICAL_DEVICE_GUIDE.md  QUICKSTART.md  README.md  SESSION_REPORT.md  TEST_RESULTS.md  VALIDATION_REPORT.md  check_emulator_options.sh  docker-compose.yml  docker-run.sh  install.sh  install_jadx.sh  install_poetry.sh  pyproject.toml  quick_emulator_setup.sh  requirements.txt  setup_emulator.sh  test_complete_suite.sh  test_frida_setup.sh  test_frida_simulation.sh
config/: config.yaml  secrets.yaml.example
frida_scripts/: README.md  crypto_hooks.js  file_hooks.js  network_hooks.js
reports/fdroid_full/: fdroid_20251123_154912.html  fdroid_20251123_154912.json
reports/frida_real_test/: fdroid_20251123_200622.json
reports/frida_test/: fdroid_20251123_190431.json
reports/simulation_test/: fdroid_20251123_183358.json
reports/static_test/: fdroid_20251123_174035.json
reports/test_complete/: fdroid_20251123_185525.html  fdroid_20251123_185525.json
reports/test_quick/: fdroid_20251123_185424.json
reports/test_standard/: fdroid_20251123_185444.json
reports/yara_test/: fdroid_20251123_175830.json
samples/: README.md
src/: __init__.py  androsleuth.py
src/modules/: __init__.py  apk_ingestion.py  component_analyzer.py  emulator.py  frida_analyzer.py  jadx_decompiler.py  manifest_analyzer.py  obfuscation_detector.py  pdf_generator.py  report_generator.py  shellcode_detector.py  static_analyzer.py  virustotal_checker.py  yara_scanner.py
src/utils/: __init__.py  entropy.py  helpers.py  logger.py
tests/: __init__.py  test_advanced_analysis.py  test_basic.py  test_report_structure.py  test_shellcode.py  test_virustotal.py
yara_rules/: README.md  android_malware.yar  android_packers.yar
